# coolq-amq

./: Cargo.toml  readme.md
app-example/: .gitignore  app.py
cqamq/: Cargo.toml  app.jsonc
cqamq/src/: client.rs  config.rs  lib.rs  message.rs
spec/: msg.md  rpc.md
