[package]
name = "cqamp"
version = "0.1.0"
authors = ["fortunewang <fortunewang@qq.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
lazy_static = "1.3.0"
lapin = "0.25.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5.1"
cqrs = { path = "../cqrs" }

[lib]
name = "cqamp"
crate-type = ["cdylib"]
